--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -24,7 +24,7 @@ body {
         Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: $text-color;
     background-color: $background-color;
-    margin: 0;
+    margin: 0 !important;
     display: flex;
     place-items: center;
     min-width: 320px;
