--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -10,8 +10,9 @@
   align-items: center;
   padding: 0 20px;
   height: 60px;
-  border-bottom: 1px solid var(--border-color);
-  background-color: #333;
+  border-bottom: 1px solid #e0e0e0;
+  background-color: #fff;
+  color: #222;
 }
 
 .logo {
