--- a/src/components/sidebar/AppSidebar.scss
+++ b/src/components/sidebar/AppSidebar.scss
@@ -1,6 +1,6 @@
 @use '@/styles/color-tokens' as *;
 
-.calendar-sidebar {
+.app-sidebar {
   width: 240px;
   min-width: 180px;
   border-right: 1px solid var(--border-color);
@@ -71,8 +71,8 @@
   }
 }
 
-body[data-theme='dark'] .calendar-sidebar,
-.dark-mode .calendar-sidebar {
+body[data-theme='dark'] .app-sidebar,
+.dark-mode .app-sidebar {
   background: $color-gray-900;
   color: $color-gray-100;
   
