--- a/src/styles/_color-tokens.scss
+++ b/src/styles/_color-tokens.scss
@@ -149,7 +149,7 @@ $color-pink-950: #2c0514;
   --warning-color: #{$color-yellow-600};
 }
 
-[data-theme="dark"] {
+[data-theme='dark'] {
   // Dark theme
   --bg-primary: #{$color-gray-950};
   --bg-secondary: #{$color-gray-900};
