--- a/src/pages/auth/LoginPage.scss
+++ b/src/pages/auth/LoginPage.scss
@@ -27,8 +27,8 @@
   text-align: center;
 }
 
-.login-form input[type="email"],
-.login-form input[type="password"] {
+.login-form input[type='email'],
+.login-form input[type='password'] {
   background: var(--bg-tertiary);
   color: var(--text-primary);
   border: 1px solid var(--border-color);
@@ -40,8 +40,8 @@
   box-sizing: border-box;
 }
 
-.login-form input[type="email"]:focus,
-.login-form input[type="password"]:focus {
+.login-form input[type='email']:focus,
+.login-form input[type='password']:focus {
   outline: 2px solid var(--accent-color);
   border-color: var(--accent-color);
 }
