--- a/projects/calendar/src/components/ui/bottom-sheet.scss
+++ b/projects/calendar/src/components/ui/bottom-sheet.scss
@@ -18,7 +18,7 @@
   &--open {
     opacity: 1;
     visibility: visible;
-    background: var(--tailwind-colors-zinc-100, #f4f4f5);
+    background: transparent;
   }
 
   &--closing {
